# BikeSentry-ROS-RasPi

./: CMakeLists.txt  LICENSE  README.md  clean_recordings.sh  launch.sh  package.xml  requirements.txt
launch/: main.launch
models/: binary_classifier.joblib  mfcc_scaler.pkl
scripts/: record_float32.py  record_int16.py  theft_alert.py
src/: AudioManager.py  audio_classifier.py  audio_recorder.py  gpio_handler.py
template/: empty_publisher.py  empty_subscriber.py
tf_models/: angle-grinder-detector-2s.tflite
